# Task1

./: .gitignore  CMakeLists.txt  README.md
App/src/: main.c
Lib/include/: buffer.h  cli_parser.h  processor.h
Lib/src/: buffer.c  cli_parser.c  processor.c
